# prototype-rover

./: Circuit_toy_car.fzz  README.md  app_2.py  app_3.py  app_4.py  app_cam.py  cam_test.py  rover.py  test_3.py
Android studio/RobotController/: gradle.properties
Android studio/RobotController/app/: build.gradle.kts
Android studio/RobotController/gradle/wrapper/: gradle-wrapper.properties
ESP32_hotspot/: ESP32_hotspot.ino
ESP32_hotspot_2/: ESP32_hotspot_2.ino
Robot_raspberrypi/: Final_testing.py  Ultrasonic_test.py  Ultrasonic_test.py.save  Ultrasonic_test_utf8.py  app.py  app_4.py  app_5.py  app_6.py  app_75_steer.py  app_cam_steer.py  app_gpiod.py  app_hotspot.py  cam_test.py  cleanup.py  combinedcode.py  complete_test.py  hotspot.py  newrobot.py  newrover.py  newrover_bugged.py  newrover_wuls.py  newrover_wuls_2.py  newrover_wuls_3.py  test.py  test_2.py  test_gpio.py  twentyfourfeb.py
Robot_raspberrypi/recordings/: recording_20241124_161241.avi
Robot_raspberrypi/templates/: Controls.html  NewControls.html  control.html
ros2_ws/: build_log.txt
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/robot_control/share/robot_control/: package.sh  package.xml
ros2_ws/install/robot_control/share/robot_control/launch/: robot_control_launch.py
ros2_ws/install/robot_control/share/robot_control/templates/: control.html
ros2_ws/log/: latest_build
ros2_ws/src/robot_control/: setup.py
ros2_ws/src/robot_control/robot_control/: gpio_control.py  web_server.py
templates/: Controls.html  control.html
(+8 files in other folders)
